<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">API</string>
    <string name="_2018">2018</string>
    <string name="marka">MARKA:</string>
    <string name="model">MODEL:</string>
    <string name="rok_produkcji">ROK PRODUKCJI:</string>
    <string name="rodzaj_paliwa">RODZAJ PALIWA:</string>
    <string name="audi">AUDI</string>
    <string name="benzyna">BENZYNA</string>
    <string name="a6">A6</string>
    <string name="uzupe_nij_pola">UZUPEŁNIJ POLA</string>
    <string name="akceptuj">Akceptuj</string>
    <string name="wpisz_mark_pojazdu">Wpisz markę pojazdu</string>
    <string name="podaj_rok_pojazdu">Podaj rok pojazdu</string>
    <string name="wpisz_model_pojazdu">Wpisz model pojazdu</string>
    <string name="informacje">Informacje</string>
    <string name="wpisz_dat_pocz_tkow">Wpisz datę początkową</string>
    <string name="wpisz_dat_ko_cow">Wpisz datę końcową</string>
    <string name="prosze_czeka">Prosze czekać</string>
    <string name="data_od">Data od:</string>
    <string name="data_do">Data do:</string>
    <string name="wybrane_informacje_dla_wojew_dztwa">Wybrane informacje dla województwa</string>
    <string name="_2020_12_12">2020.12.12</string>
    <string name="_2021_01_12">2021.01.12</string>
    <string name="wojew_dztwo">Województwo</string>
    <string name="ilo_zarejestrowanych_pojazd_w">Ilość zarejestrowanych pojazdów:</string>
    <string name="powiat">POWIAT:</string>
    <string name="zamojski">ZAMOJSKI</string>
    <string name="rodzaj_auta">RODZAJ AUTA:</string>
    <string name="sedan">SEDAN</string>
    <string name="masa_auta">MASA AUTA:</string>
    <string name="kg">KG</string>
    <string name="aby_skopiowa_id_kliknij_w_kafelek">Aby skopiować ID kliknij w kafelek!</string>
    <string-array name="paliwo">
        <item>Benzyna</item>
        <item>Olej napędowy</item>
        <item>Energia elektryczna</item>
        <item>Wszystko</item>
    </string-array>
    <string-array name="wojewodztwa">
        <item>Dolnośląskie</item>
        <item>Kujawsko-Pomorskie</item>
        <item>Lubelskie</item>
        <item>Lubuskie</item>
        <item>Łódzkie</item>
        <item>Małopolskie</item>
        <item>Mazowieckie</item>
        <item>Opolskie</item>
        <item>Podkarpackie</item>
        <item>Podlaskie</item>
        <item>Pomorskie</item>
        <item>Śląskie</item>
        <item>Świętokrzyskie</item>
        <item>Warmińsko-Mazurskie</item>
        <item>Wielkopolskie</item>
        <item>Zachodniopomorskie</item>
    </string-array>
</resources>