<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F1F1F1"
    android:layout_height="match_parent"
    tools:context=".ResultFragment">

    <LinearLayout
        android:background="#F1F1F1"
        android:id="@+id/layoutCurrent"
        android:paddingRight="22sp"
        android:paddingLeft="22sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <TextView
            android:textColor="@color/ltBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22sp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/bottm"
            android:layout_gravity="center"
            android:text="@string/wybrane_informacje_dla_wojew_dztwa"/>

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/wojText"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wojew_dztwo"/>
        <TextView
            android:textColor="@color/ltBlack"
            android:id="@+id/wojNums"
            android:textSize="18sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ilo_zarejestrowanych_pojazd_w"/>
        <ListView
            android:divider="@color/ltWhite"
            android:dividerHeight="12dp"
            android:layout_marginTop="22sp"
            android:layout_marginBottom="22sp"
            android:scrollbars="none"
            android:id="@+id/carListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="70sp"
        android:paddingRight="70sp"
        android:background="@drawable/radius_blue"
        android:id="@+id/hideLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prosze_czeka"/>

        <ProgressBar
            android:layout_marginTop="12sp"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"/>

            <TextView
                android:textColor="@color/ltBlack"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_od"/>
            <TextView
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="22sp"
                android:id="@+id/dateText"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2020_12_12"/>
            <TextView
                android:textColor="@color/ltBlack"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_do"/>
            <TextView
                android:textColor="@color/black"
                android:layout_marginBottom="22sp"
                android:id="@+id/dateTextEnd"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2021_01_12"/>
    </LinearLayout>
</RelativeLayout>